# SpectraCore

./: AUTHORS.md  CMakeLists.txt  README.md  README.txt  build.sh  config.txt
doc/: index.html
include/SpectraCore/: Analyzer.h  AsyncAnalyzer.h  Instantiate.h  Types.h
include/SpectraCore/detail/: buffer.h  fft_plan.h  simd.h  window.h
src/: detect_simd.cpp  explicit_instantiations.cpp
tests/: benchmark.cpp  test_accuracy.cpp  test_simd.cpp
